adicionando métodos e testes
métodos e testes para StockServices